--- a/README
+++ b/README
@@ -10,4 +10,12 @@ Pending
  * Sentence Duration
  * Name Frequency
  * Conviction month
+ * Convict photos
+ * Add an indicator about fleet number e.g. leaving 1787 is first fleet
+
+
+http://members.iinet.net.au/~perthdps/convicts/index.html
+
+West Aust Ships:
+http://en.wikipedia.org/wiki/List_of_convict_ships_to_Western_Australia
 
