add transmit theme

--- a/README
+++ b/README
@@ -12,7 +12,8 @@ Pending
  * Conviction month
  * Convict photos
  * Add an indicator about fleet number e.g. leaving 1787 is first fleet
-
+ * Link boats to wikipedia
+ * Create bar chart showing ships that transported the most convicts
 
 http://members.iinet.net.au/~perthdps/convicts/index.html
 
