add dynamic sorting, break pagination

--- a/README
+++ b/README
@@ -15,6 +15,11 @@ Pending
  * Link boats to wikipedia
  * Create bar chart showing ships that transported the most convicts
 
+Data to clean:
+ * Sentence
+ * Destination
+ * Name
+
 http://members.iinet.net.au/~perthdps/convicts/index.html
 
 West Aust Ships:
